Added ui design for message component

--- a/views/index.html
+++ b/views/index.html
@@ -59,7 +59,18 @@
 				</div>
 			</div>
 			<div class="chat_body">
-				<p>This is a message body</p>
+				<div class="chat_message">
+					<span class="chat_messageAuthor">Agape Raston</span>
+					<div style="background-color: #fff;" class="chat_messageBody">
+						<p>
+							Hi Louis, how are you doing?
+						</p>
+						<div class="chat_messageBodyMeta">
+							<div class="chat_messageBodyMetaStatus">sent</div>
+							<div class="chat_messageBodyMetaTimeStamp">Fri, 23 Nov 2021</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>	
