--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -29,3 +29,11 @@
 @media(max-width: 767px) {
   .ui-chat-container { width: auto; left: 0; padding-left: 20px; }
 }
+
+
+.chat_message{display: flex;flex-direction: column;max-width: 50%;background: transparent;}
+.chat_messageAuthor{font-size: 10px;font-weight: bold;}
+.chat_messageBody{display: flex; flex-direction: column; flex:1;border: 1px solid #ededed; border-radius: 12px;padding: 10px;}
+.chat_messageBody .chat_messageBodyMeta{ display: flex; width: 100%; justify-content: space-between;align-items: center;}
+.chat_messageBody .chat_messageBodyMetaTimeStamp{ display: flex; flex: 1; font-size: xx-small; color: grey;}
+.chat_messageBody .chat_messageBodyMetaStatus{display: flex; flex: 1; font-size: x-small;}
