--- a/views/login.html
+++ b/views/login.html
@@ -36,13 +36,9 @@
 				<div data-scope="loginform" class="animation" style="background-color:#FFF;padding:35px;border-radius:5px;margin:100px 0 0;width:380px;position:absolute;left:50%;top:40%;margin:-200px 0 0 -175px;box-shadow:0 0 20px rgba(0,0,0,0.3);">
 					<div data---="enter__?">
 						<div class="caption" style="text-align:center;font-size:20px;margin-bottom:15px">@(FineX)</div>
-						<div data---="input__?.phone__required:1__" class="m" style="margin-top:10px" data-bind="?.showcode__disabled">@(Numéro de Téléphone)</div>
-						<div data-bind="?.showcode__show" class="hidden">
-							<p><i class="far fa-qrcode mr5"></i>@(Entrer votre le code PIN recu sur votre numéro)</p>
-							<div data---="pin__?.code__count:4;requied:1" class="m">@(Code)</div>
-						</div>
+						<div data---="input__?.phone__type:phone;required:1" class="m" style="margin-top:10px" >@(Numéro de Téléphone)</div>
 						<div data---="validation__?" class="mt10">
-							<button name="submit" class="exec" data-exec="?/submit" disabled><i class="far fa-sign-in-alt"></i>@(Sign-in)</button>
+							<button name="submit" class="exec" data-exec="?/submit" disabled>@(Sign-in)</button>
 						</div>
 					</div>
 				</div>
@@ -50,20 +46,13 @@
         </div>
 	<script>
 		var common = {};
-
+		console.log();
 		PLUGIN('loginform', function(exports) {
 			exports.submit = function() {
-				AJAX('POST  /api/login/', GET('? @reset'), ASETTER('message/response', function(response) {
-					if (response.value) {
-						SET('?.showcode', true);
-						FIND('pin').focus();
-					} else
-						location.href = '/';
-				}));
+			 var model = GET('?');
+			 console.log(model);
 			};
-
 		});
-	
 	</script>
 </body>
 </html>
