--- a/views/login.html
+++ b/views/login.html
@@ -110,7 +110,7 @@
 			<div data-bind="common.type__show:value === 'signin_otp'" class="hidden">
 				<div class="center">
 					<div class="help">@(Entrer le code de confirmation récu sur votre numéro)</div>
-					<div class="m mt10" data---="pin__signin_otp.password__mask:false__''"></div>
+					<div class="m mt10" data---="pin__signin_otp.passcode__mask:false__''"></div>
 				</div>
 				<div data---="validation__signin_otp">
 					<button type="button" class="b signin_otpsubmit" name="submit" disabled="disabled"><i class="fa fa-check-circle"></i>@(Confirmer)</button>
@@ -122,7 +122,7 @@
 			<div data-bind="common.type__show:value === 'signup_otp'" class="hidden">
 				<div class="center">
 					<div class="help">@(Entrer le code de confirmation récu sur votre numéro)</div>
-					<div class="m mt10" data---="pin__signup_otp.password__mask:false__''"></div>
+					<div class="m mt10" data---="pin__signup_otp.passcode__mask:false__''"></div>
 				</div>
 				<div data---="validation__signup_otp">
 					<button type="button" class="b signup_otpsubmit" name="submit" disabled="disabled"><i class="fa fa-check-circle"></i>@(Confirmer)</button>
@@ -131,9 +131,6 @@
 					<span class="link exec" data-exec="togglesignin"><i class="fa fa-angle-right mr5"></i>@(Je n'ai pas recu)</span>
 				</div>
 			</div>
-			
-
-			
 		</div>
 		<footer>
 			<div>Tout droits réservé &copy; @{NOW.getFullYear()}</div>
@@ -154,14 +151,14 @@
 			$('.panel').aclass('panelshow');
 		}, 200);
 
-		WATCH('signin_otp.password', function(path, value) {
+		WATCH('signin_otp.passcode', function(path, value) {
 			if (value && value.length === 6 && value.indexOf(' ') === -1) {
 				setTimeout(function() {
 					$('.signin_otpsubmit').trigger('click');
 				}, 500);
 			}
 		});
-		WATCH('signup_otp.password', function(path, value) {
+		WATCH('signup_otp.passcode', function(path, value) {
 			if (value && value.length === 6 && value.indexOf(' ') === -1) {
 				setTimeout(function() {
 					$('.signup_otpsubmit').trigger('click');
@@ -195,7 +192,7 @@
 				console.log(signin_otp);
 				AJAX('signin_otp', signin_otp, function(response) {
 					if (response instanceof Array) {
-						NUL('signin_otp.password');
+						NUL('signin_otp.passcode');
 						SETTER('message/warning', response[0].error, ASETTER('pin/focus'));
 					} else {
 						SET('signin_otp.response', response);
@@ -206,7 +203,7 @@
 				console.log(signup_otp);
 				AJAX('POST /api/users/', signup_otp, function(response) {
 					if (response instanceof Array) {
-						NUL('signup_otp.password');
+						NUL('signup_otp.passcode');
 						SETTER('message/warning', response[0].error, ASETTER('pin/focus'));
 					} else {
 						SET('signup_otp.response', response);
@@ -216,6 +213,7 @@
 			}else if (common.type === 'signup') {
 				AJAX('POST /api/users/otp/',signupform, function(response) {
 					if (response.otp) {
+						console.log(response.otp);
 						SET('signup_otp',response);
 						togglesignup_otp();
 					}
